--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,10 @@
-.principal {
- display: flex;
- flex-direction: column;
- align-items: center;
+.main {
+ display: "flex";
+ flex-direction: "column";
+ height: "120vh";
+}
+
+.hero {
+ margin-left: 10%;
+ margin-right: 10%;
 }
