--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,10 +1,124 @@
 .main {
  display: "flex";
  flex-direction: "column";
- height: "120vh";
+ background-color: #EDEFEE;
+}
+/*Aqui estan los estilos CSS para el Hero dentro del sector main*/
+.hero {
+ margin-left: 6rem;
+ margin-right: 6rem;
+ height: 35vh;
+ display: grid;
+ grid-template-columns: 50% 50%;
+ grid-template-rows: 10% 60% 20% 10%;
+}
+.heroup {
+ background-color: #495E57;
+ grid-column: 1 / 3;
+ grid-row: 1 / 3;
+ margin-left: -6rem;
+ margin-right: -6rem;
+}
+.generalInfo {
+ background-color: #495E57;
+ grid-column: 1 / 2;
+ grid-row: 2 / 3;
+}
+.generalInfo > h1 {
+ color: #F4CE14;
+ margin: 0 0 0 10px;
+ font-size: 2rem; 
+}
+.generalInfo > h3 {
+ color: #EDEFEE;
+ margin: 0 0 0 10px; 
+ font-size: 1.5rem;
+}
+.generalInfo > p {
+ color: #EDEFEE;
+ margin: 0 0 0 10px; 
+ padding: 1rem 2rem 1rem 0;
+ font-size: 1rem;
+}
+.generalInfo > input {
+ color: #495E57;
+ background-color: #F4CE14;
+ margin: 0 0 0 10px;
+ border: none;
+ padding: 0.5rem 1rem 0.5rem 1rem;
+ border-radius: 0.5rem;
+ font-weight: bold;
+ font-size: 1rem;
+}
+.herobottom {
+ background-color: #EDEFEE;
+ grid-column: 1 /3;
+ grid-row: 3 / 5;
+}
+.heroimage {
+ border-radius: 1rem;
+ grid-column: 2 / 3;
+ grid-row: 2 / 4;
+ align-self: stretch;
+ justify-self: center;
+}
+/*Aqui estan los estilos CSS para el Specials dentro del sector main*/
+.specials {
+ height: 55vh;
+ margin-left: 6rem;
+ margin-right: 6rem;
+ background-color: #EDEFEE;
+ display: grid;
+ grid-template-columns: 33% 34% 33%;
+ grid-template-rows: 10% 90%;
+}
+.specials > h1 {
+ grid-column: 1 / 3;
+ grid-row: 1 / 2;
+ margin: 1rem;
+ padding: 0rem;
+ font-size: 2.5rem;
+ align-self: center;
+ color: #333333;
+}
+.specials > input {
+ grid-column: 3 / 4;
+ grid-row: 1 / 2;
+ margin: 1rem;
+ width: 50%;
+ height: 80%;
+ justify-self: center;
+ align-self: center;
+ background-color: #F4CE14;
+ font-weight: bold;
+ font-size: 1rem;
+ border-radius: 0.5rem;
+ border: none;
+ color: #333333;
+}
+.greek {
+ grid-column: 1 / 2;
+ grid-row: 2 / 3;
+ justify-self: stretch;
+ margin: 0.5rem;
+ background-color: #d7d7d7;
+}
+.bruchetta {
+ grid-column: 2 / 3;
+ grid-row: 2 / 3;
+ margin: 0.5rem;
+ background-color: #d7d7d7;
+}
+.lemon {
+ grid-column: 3 / 4;
+ grid-row: 2 / 3;
+ margin: 0.5rem;
+ background-color: #d7d7d7;
 }
 
-.hero {
- margin-left: 10%;
- margin-right: 10%;
+.comments {
+ height: 20vh;
+ margin-left: 6rem;
+ margin-right: 6rem;
+ background-color: #EDEFEE;
 }
